--- a/templates/blog/search.html
+++ b/templates/blog/search.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 
-<body id="blog_post_show">
+<body id="blog_search">
 
 <header>
     <div class="navbar navbar-default navbar-static-top" role="navigation">
